[gd_scene load_steps=9 format=3 uid="uid://lj7dat5kwh4l"]

[ext_resource type="Script" path="res://ipad_menu/scripts/IpadMenuItem.gd" id="1_kpo1c"]
[ext_resource type="Texture2D" uid="uid://2abbcvmdjjf6" path="res://assets/images/danyan_art/salmon_nigiri_2.png" id="2_dq5lt"]
[ext_resource type="Texture2D" uid="uid://d3w8hu6r2eps5" path="res://akosua_test_images/arrow.png" id="2_lvcbl"]
[ext_resource type="Texture2D" uid="uid://dphfdg1ub7x62" path="res://akosua_test_images/arrow pressed.png" id="3_euigx"]
[ext_resource type="Texture2D" uid="uid://dejb6v67rr2r" path="res://akosua_test_images/arrow hover.png" id="4_pglcx"]
[ext_resource type="Texture2D" uid="uid://dhe4k65d0rgpi" path="res://akosua_test_images/arrow disabled.png" id="5_afrw8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma5fm"]
bg_color = Color(1, 0.888, 0.72, 0.294118)

[sub_resource type="LabelSettings" id="LabelSettings_hslq3"]

[node name="ipad_menu_item_new" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -872.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ma5fm")
script = ExtResource("1_kpo1c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="menu_item_image" type="TextureRect" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("2_dq5lt")
expand_mode = 1

[node name="menu_item_buttons" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="menu_item_button_up" type="TextureButton" parent="VBoxContainer/menu_item_buttons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -36.0
offset_right = 60.0
offset_bottom = 15.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_lvcbl")
texture_pressed = ExtResource("3_euigx")
texture_hover = ExtResource("4_pglcx")
texture_disabled = ExtResource("5_afrw8")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/menu_item_buttons"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_hslq3")

[node name="menu_item_button_down" type="TextureButton" parent="VBoxContainer/menu_item_buttons"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -36.0
offset_right = -11.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
disabled = true
texture_normal = ExtResource("2_lvcbl")
texture_pressed = ExtResource("3_euigx")
texture_hover = ExtResource("4_pglcx")
texture_disabled = ExtResource("5_afrw8")
ignore_texture_size = true
stretch_mode = 5
flip_v = true

[connection signal="pressed" from="VBoxContainer/menu_item_buttons/menu_item_button_up" to="." method="_on_menu_item_button_up_pressed"]
[connection signal="pressed" from="VBoxContainer/menu_item_buttons/menu_item_button_down" to="." method="_on_menu_item_button_down_pressed"]
